# VelocityFM

./: .gitattributes  .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
artifacts/: artifact_manifest.json  drive_source_manifest.json
checkpoints/: checkpoint_manifest.json
configs/evaluation/: benchmark_72.yaml
configs/inference/: rollout_128.yaml
configs/model/: velocityfm.yaml
configs/training/: notebook_snapshot_2026-06-19.yaml  paper_reported.yaml
notebooks/: README.md
notebooks/01_data/: 01_download_atlas.ipynb  02_filter_atlas.ipynb  03_select_diverse_chains.ipynb  04_split_data_legacy.ipynb  05_extract_openfold_features_v4.ipynb  06_generate_esm_embeddings.ipynb
notebooks/02_training/: 01_velocityfm_training_current.ipynb
notebooks/03_inference/: 01_velocityfm_inference_strictpdb.ipynb
notebooks/04_evaluation/: 01_protein_trajectory_validation.ipynb  02_ground_truth_data_validation.ipynb  03_torsion_to_pdb_reconstruction.ipynb  04_contact_stability_analysis.ipynb
notebooks/exports/: 01_download_atlas.py  01_protein_trajectory_validation.py  01_velocityfm_inference_strictpdb.py  01_velocityfm_training_current.py  02_filter_atlas.py  02_ground_truth_data_validation.py  03_select_diverse_chains.py  03_torsion_to_pdb_reconstruction.py  (+4 more)
results/: README.md
scripts/: extract_notebook_sources.py  run_inference_notebook.sh  run_training_notebook.sh  summarize_population.py  validate_repository.py
tests/: test_ar1.py  test_integration.py  test_results.py  test_so3.py
(+12 files in other folders)
